--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,17 +4,21 @@
 
 @font-face {
   font-family: Roboto-bold;
-  src: url(../../assets/fonts/Roboto-Bold.ttf);
+  src: url(../fonts/Roboto-Bold.ttf);
+  font-weight: 700;
 }
 @font-face {
   font-family: Roboto-regular;
-  src: url(../../assets/fonts/Roboto-Regular.ttf);
+  src: url(../fonts/Roboto-Regular.ttf);
 }
 body {
   font-size: 16px;
   font-family: Roboto-regular, sans-serif;
 }
-p {
+h1 {
+  font-size: 30px;
+  font-family: Roboto-bold, sans-serif;
+  align-self: flex-start;
 }
 
 /* 
