--- a/public/style/output.css
+++ b/public/style/output.css
@@ -544,12 +544,32 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.mb-7 {
-  margin-bottom: 1.75rem;
+.float-start {
+  float: inline-start;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.float-left {
+  float: left;
+}
+
+.float-none {
+  float: none;
+}
+
+.mb-\[15px\] {
+  margin-bottom: 15px;
+}
+
+.ml-\[10px\] {
+  margin-left: 10px;
+}
+
+.ml-\[25px\] {
+  margin-left: 25px;
+}
+
+.mt-\[40px\] {
+  margin-top: 40px;
 }
 
 .flex {
@@ -560,28 +580,16 @@ video {
   display: none;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-\[280px\] {
+  width: 280px;
 }
 
-.w-80 {
-  width: 20rem;
+.w-\[375px\] {
+  width: 375px;
 }
 
-.w-96 {
-  width: 24rem;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-64 {
-  width: 16rem;
-}
-
-.w-\[375\] {
-  width: 375;
+.snap-center {
+  scroll-snap-align: center;
 }
 
 .flex-row {
@@ -600,10 +608,52 @@ video {
   justify-content: center;
 }
 
+.justify-items-center {
+  justify-items: center;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.text-charcoalGrey {
+  --tw-text-opacity: 1;
+  color: rgb(53 54 66 / var(--tw-text-opacity));
+}
+
+.text-darkSlateGrey {
+  --tw-text-opacity: 1;
+  color: rgb(36 37 51 / var(--tw-text-opacity));
+}
+
 @font-face {
   font-family: Roboto-bold;
 
-  src: url(../../assets/fonts/Roboto-Bold.ttf);
+  src: url(../fonts/Roboto-Bold.ttf);
 
   font-weight: 700;
 }
@@ -611,7 +661,7 @@ video {
 @font-face {
   font-family: Roboto-regular;
 
-  src: url(../../assets/fonts/Roboto-Regular.ttf);
+  src: url(../fonts/Roboto-Regular.ttf);
 }
 
 body {
@@ -620,9 +670,18 @@ body {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 40px;
   font-family: Roboto-bold, sans-serif;
   align-self: flex-start;
+}
+
+ul {
+  list-style-image: url("../images/icon-list.svg");
+}
+
+li {
+  font-size: 16px;
+  font-family: Roboto-regular, sans-serif;
 }
 
 /* 
