--- a/public/style/style.css
+++ b/public/style/style.css
@@ -16,11 +16,17 @@ body {
   font-family: Roboto-regular, sans-serif;
 }
 h1 {
-  font-size: 30px;
+  font-size: 40px;
   font-family: Roboto-bold, sans-serif;
   align-self: flex-start;
 }
-
+ul {
+  list-style-image: url("../images/icon-list.svg");
+}
+li {
+  font-size: 16px;
+  font-family: Roboto-regular, sans-serif;
+}
 /* 
 ### Primary
 
