--- a/public/style/output.css
+++ b/public/style/output.css
@@ -544,20 +544,20 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.float-start {
-  float: inline-start;
-}
-
-.float-left {
-  float: left;
-}
-
-.float-none {
-  float: none;
+.mb-\[10px\] {
+  margin-bottom: 10px;
 }
 
 .mb-\[15px\] {
   margin-bottom: 15px;
+}
+
+.mb-\[20px\] {
+  margin-bottom: 20px;
+}
+
+.mb-\[7px\] {
+  margin-bottom: 7px;
 }
 
 .ml-\[10px\] {
@@ -568,8 +568,20 @@ video {
   margin-left: 25px;
 }
 
+.mt-\[10px\] {
+  margin-top: 10px;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
+}
+
 .mt-\[40px\] {
   margin-top: 40px;
+}
+
+.mb-\[50px\] {
+  margin-bottom: 50px;
 }
 
 .flex {
@@ -580,16 +592,44 @@ video {
   display: none;
 }
 
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
 .w-\[280px\] {
   width: 280px;
+}
+
+.w-\[325px\] {
+  width: 325px;
 }
 
 .w-\[375px\] {
   width: 375px;
 }
 
-.snap-center {
-  scroll-snap-align: center;
+.w-\[340px\] {
+  width: 340px;
+}
+
+.w-\[1000px\] {
+  width: 1000px;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[1440px\] {
+  width: 1440px;
+}
+
+.list-outside {
+  list-style-position: outside;
 }
 
 .flex-row {
@@ -608,12 +648,20 @@ video {
   justify-content: center;
 }
 
-.justify-items-center {
-  justify-items: center;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
-.self-center {
-  align-self: center;
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -624,20 +672,61 @@ video {
   border-style: solid;
 }
 
-.text-center {
-  text-align: center;
+.border-grey {
+  --tw-border-opacity: 1;
+  border-color: rgb(142 143 153 / var(--tw-border-opacity));
+}
+
+.bg-darkSlateGrey {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 37 51 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.pl-\[10px\] {
+  padding-left: 10px;
+}
+
+.pl-\[20px\] {
+  padding-left: 20px;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-\[16px\] {
   font-size: 16px;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-medium {
   font-weight: 500;
+}
+
+.font-thin {
+  font-weight: 100;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.text-darkSlateGrey {
+  --tw-text-opacity: 1;
+  color: rgb(36 37 51 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-charcoalGrey {
@@ -645,9 +734,9 @@ video {
   color: rgb(53 54 66 / var(--tw-text-opacity));
 }
 
-.text-darkSlateGrey {
+.text-tomato {
   --tw-text-opacity: 1;
-  color: rgb(36 37 51 / var(--tw-text-opacity));
+  color: rgb(170 8 0 / var(--tw-text-opacity));
 }
 
 @font-face {
@@ -675,14 +764,27 @@ h1 {
   align-self: flex-start;
 }
 
+h3 {
+  font-family: Roboto-bold, sans-serif;
+  font-size: 14px;
+}
+
 ul {
   list-style-image: url("../images/icon-list.svg");
+}
+
+li::marker {
+  padding-top: 10px;
 }
 
 li {
   font-size: 16px;
   font-family: Roboto-regular, sans-serif;
 }
+
+/* #emailInput::placeholder {
+  margin-left: 20px;
+} */
 
 /* 
 ### Primary
@@ -708,12 +810,157 @@ li {
 - Weights: 400, 700
 */
 
+.placeholder\:pl-\[20px\]::-moz-placeholder {
+  padding-left: 20px;
+}
+
+.placeholder\:pl-\[20px\]::placeholder {
+  padding-left: 20px;
+}
+
 @media (min-width: 800px) {
+  .xl\:m-0 {
+    margin: 0px;
+  }
+
+  .xl\:ml-\[20px\] {
+    margin-left: 20px;
+  }
+
+  .xl\:mr-\[20px\] {
+    margin-right: 20px;
+  }
+
+  .xl\:mr-\[50px\] {
+    margin-right: 50px;
+  }
+
+  .xl\:mr-\[10px\] {
+    margin-right: 10px;
+  }
+
+  .xl\:mr-\[5px\] {
+    margin-right: 5px;
+  }
+
+  .xl\:ml-\[5px\] {
+    margin-left: 5px;
+  }
+
+  .xl\:ml-\[0\] {
+    margin-left: 0;
+  }
+
+  .xl\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .xl\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .xl\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .xl\:ml-10 {
+    margin-left: 2.5rem;
+  }
+
+  .xl\:ml-\[40px\] {
+    margin-left: 40px;
+  }
+
+  .xl\:ml-\[10px\] {
+    margin-left: 10px;
+  }
+
   .xl\:flex {
     display: flex;
   }
 
   .xl\:hidden {
     display: none;
+  }
+
+  .xl\:h-\[500px\] {
+    height: 500px;
+  }
+
+  .xl\:h-\[80\%\] {
+    height: 80%;
+  }
+
+  .xl\:h-\[90\%\] {
+    height: 90%;
+  }
+
+  .xl\:w-\[375px\] {
+    width: 375px;
+  }
+
+  .xl\:w-\[800px\] {
+    width: 800px;
+  }
+
+  .xl\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .xl\:w-\[325px\] {
+    width: 325px;
+  }
+
+  .xl\:w-\[300px\] {
+    width: 300px;
+  }
+
+  .xl\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .xl\:w-\[380px\] {
+    width: 380px;
+  }
+
+  .xl\:w-\[350px\] {
+    width: 350px;
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:items-center {
+    align-items: center;
+  }
+
+  .xl\:justify-center {
+    justify-content: center;
+  }
+
+  .xl\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .xl\:pl-0 {
+    padding-left: 0px;
+  }
+
+  .xl\:pl-\[40px\] {
+    padding-left: 40px;
+  }
+
+  .xl\:pl-\[30px\] {
+    padding-left: 30px;
+  }
+
+  .xl\:pl-\[20px\] {
+    padding-left: 20px;
+  }
+
+  .xl\:pl-\[10px\] {
+    padding-left: 10px;
   }
 }
