--- a/public/style/style.css
+++ b/public/style/style.css
@@ -20,13 +20,24 @@ h1 {
   font-family: Roboto-bold, sans-serif;
   align-self: flex-start;
 }
+h3 {
+  font-family: Roboto-bold, sans-serif;
+  font-size: 14px;
+}
 ul {
   list-style-image: url("../images/icon-list.svg");
 }
+li::marker {
+  padding-top: 10px;
+}
+
 li {
   font-size: 16px;
   font-family: Roboto-regular, sans-serif;
 }
+/* #emailInput::placeholder {
+  margin-left: 20px;
+} */
 /* 
 ### Primary
 
