--- a/public/style/output.css
+++ b/public/style/output.css
@@ -556,6 +556,10 @@ video {
   margin-bottom: 20px;
 }
 
+.mb-\[50px\] {
+  margin-bottom: 50px;
+}
+
 .mb-\[7px\] {
   margin-bottom: 7px;
 }
@@ -568,6 +572,10 @@ video {
   margin-left: 25px;
 }
 
+.mr-\[10px\] {
+  margin-right: 10px;
+}
+
 .mt-\[10px\] {
   margin-top: 10px;
 }
@@ -578,10 +586,6 @@ video {
 
 .mt-\[40px\] {
   margin-top: 40px;
-}
-
-.mb-\[50px\] {
-  margin-bottom: 50px;
 }
 
 .flex {
@@ -600,36 +604,28 @@ video {
   height: 800px;
 }
 
-.w-\[280px\] {
-  width: 280px;
+.h-\[900px\] {
+  height: 900px;
+}
+
+.h-\[1000px\] {
+  height: 1000px;
 }
 
 .w-\[325px\] {
   width: 325px;
 }
 
-.w-\[375px\] {
-  width: 375px;
-}
-
 .w-\[340px\] {
   width: 340px;
 }
 
-.w-\[1000px\] {
-  width: 1000px;
+.w-\[375px\] {
+  width: 375px;
 }
 
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[1440px\] {
-  width: 1440px;
-}
-
-.list-outside {
-  list-style-position: outside;
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .flex-row {
@@ -638,6 +634,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -654,14 +654,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
-}
-
-.rounded {
-  border-radius: 0.25rem;
 }
 
 .border {
@@ -687,16 +679,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.pl-\[10px\] {
-  padding-left: 10px;
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.to-orange {
+  --tw-gradient-to: #ff673e var(--tw-gradient-to-position);
 }
 
 .pl-\[20px\] {
   padding-left: 20px;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-\[16px\] {
@@ -711,12 +703,9 @@ video {
   font-weight: 100;
 }
 
-.font-normal {
-  font-weight: 400;
-}
-
-.font-bold {
-  font-weight: 700;
+.text-charcoalGrey {
+  --tw-text-opacity: 1;
+  color: rgb(53 54 66 / var(--tw-text-opacity));
 }
 
 .text-darkSlateGrey {
@@ -727,16 +716,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-charcoalGrey {
-  --tw-text-opacity: 1;
-  color: rgb(53 54 66 / var(--tw-text-opacity));
-}
-
-.text-tomato {
-  --tw-text-opacity: 1;
-  color: rgb(170 8 0 / var(--tw-text-opacity));
 }
 
 @font-face {
@@ -767,10 +746,6 @@ h1 {
 h3 {
   font-family: Roboto-bold, sans-serif;
   font-size: 14px;
-}
-
-ul {
-  list-style-image: url("../images/icon-list.svg");
 }
 
 li::marker {
@@ -810,51 +785,21 @@ li {
 - Weights: 400, 700
 */
 
-.placeholder\:pl-\[20px\]::-moz-placeholder {
-  padding-left: 20px;
+.hover\:bg-gradient-to-r:hover {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.placeholder\:pl-\[20px\]::placeholder {
-  padding-left: 20px;
+.hover\:from-salmon:hover {
+  --tw-gradient-from: #ff5379 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 83 121 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.hover\:to-orange:hover {
+  --tw-gradient-to: #ff673e var(--tw-gradient-to-position);
 }
 
 @media (min-width: 800px) {
-  .xl\:m-0 {
-    margin: 0px;
-  }
-
-  .xl\:ml-\[20px\] {
-    margin-left: 20px;
-  }
-
-  .xl\:mr-\[20px\] {
-    margin-right: 20px;
-  }
-
-  .xl\:mr-\[50px\] {
-    margin-right: 50px;
-  }
-
-  .xl\:mr-\[10px\] {
-    margin-right: 10px;
-  }
-
-  .xl\:mr-\[5px\] {
-    margin-right: 5px;
-  }
-
-  .xl\:ml-\[5px\] {
-    margin-left: 5px;
-  }
-
-  .xl\:ml-\[0\] {
-    margin-left: 0;
-  }
-
-  .xl\:ml-0 {
-    margin-left: 0px;
-  }
-
   .xl\:mb-0 {
     margin-bottom: 0px;
   }
@@ -863,16 +808,20 @@ li {
     margin-bottom: 2.5rem;
   }
 
-  .xl\:ml-10 {
-    margin-left: 2.5rem;
+  .xl\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .xl\:ml-\[10px\] {
+    margin-left: 10px;
   }
 
   .xl\:ml-\[40px\] {
     margin-left: 40px;
   }
 
-  .xl\:ml-\[10px\] {
-    margin-left: 10px;
+  .xl\:mr-\[20px\] {
+    margin-right: 20px;
   }
 
   .xl\:flex {
@@ -883,81 +832,36 @@ li {
     display: none;
   }
 
-  .xl\:h-\[500px\] {
-    height: 500px;
-  }
-
-  .xl\:h-\[80\%\] {
-    height: 80%;
-  }
-
   .xl\:h-\[90\%\] {
     height: 90%;
   }
 
-  .xl\:w-\[375px\] {
-    width: 375px;
+  .xl\:h-\[600px\] {
+    height: 600px;
   }
 
-  .xl\:w-\[800px\] {
-    width: 800px;
+  .xl\:h-\[550px\] {
+    height: 550px;
   }
 
-  .xl\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .xl\:w-\[325px\] {
-    width: 325px;
-  }
-
-  .xl\:w-\[300px\] {
-    width: 300px;
-  }
-
-  .xl\:w-\[400px\] {
-    width: 400px;
-  }
-
-  .xl\:w-\[380px\] {
-    width: 380px;
+  .xl\:h-\[100\%\] {
+    height: 100%;
   }
 
   .xl\:w-\[350px\] {
     width: 350px;
   }
 
-  .xl\:flex-row {
-    flex-direction: row;
+  .xl\:w-\[400px\] {
+    width: 400px;
   }
 
-  .xl\:items-center {
-    align-items: center;
+  .xl\:w-\[50\%\] {
+    width: 50%;
   }
 
-  .xl\:justify-center {
-    justify-content: center;
-  }
-
-  .xl\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .xl\:pl-0 {
-    padding-left: 0px;
-  }
-
-  .xl\:pl-\[40px\] {
-    padding-left: 40px;
-  }
-
-  .xl\:pl-\[30px\] {
-    padding-left: 30px;
-  }
-
-  .xl\:pl-\[20px\] {
-    padding-left: 20px;
+  .xl\:w-\[800px\] {
+    width: 800px;
   }
 
   .xl\:pl-\[10px\] {
