--- a/public/style/output.css
+++ b/public/style/output.css
@@ -604,14 +604,6 @@ video {
   height: 800px;
 }
 
-.h-\[900px\] {
-  height: 900px;
-}
-
-.h-\[1000px\] {
-  height: 1000px;
-}
-
 .w-\[325px\] {
   width: 325px;
 }
@@ -648,6 +640,10 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -679,12 +675,13 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+.bg-errorInput {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 232 230 / var(--tw-bg-opacity));
 }
 
-.to-orange {
-  --tw-gradient-to: #ff673e var(--tw-gradient-to-position);
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .pl-\[20px\] {
@@ -716,6 +713,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-errorText {
+  --tw-text-opacity: 1;
+  color: rgb(239 135 125 / var(--tw-text-opacity));
 }
 
 @font-face {
@@ -785,10 +787,6 @@ li {
 - Weights: 400, 700
 */
 
-.hover\:bg-gradient-to-r:hover {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
 .hover\:from-salmon:hover {
   --tw-gradient-from: #ff5379 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 83 121 / 0) var(--tw-gradient-to-position);
@@ -834,18 +832,6 @@ li {
 
   .xl\:h-\[90\%\] {
     height: 90%;
-  }
-
-  .xl\:h-\[600px\] {
-    height: 600px;
-  }
-
-  .xl\:h-\[550px\] {
-    height: 550px;
-  }
-
-  .xl\:h-\[100\%\] {
-    height: 100%;
   }
 
   .xl\:w-\[350px\] {
