--- a/public/style/output.css
+++ b/public/style/output.css
@@ -576,12 +576,20 @@ video {
   margin-left: 25px;
 }
 
+.ml-\[30px\] {
+  margin-left: 30px;
+}
+
 .mr-\[10px\] {
   margin-right: 10px;
 }
 
 .mt-\[10px\] {
   margin-top: 10px;
+}
+
+.mt-\[200px\] {
+  margin-top: 200px;
 }
 
 .mt-\[30px\] {
@@ -592,62 +600,6 @@ video {
   margin-top: 40px;
 }
 
-.ml-\[20px\] {
-  margin-left: 20px;
-}
-
-.ml-\[40px\] {
-  margin-left: 40px;
-}
-
-.mt-\[20px\] {
-  margin-top: 20px;
-}
-
-.ml-\[200px\] {
-  margin-left: 200px;
-}
-
-.ml-\[100px\] {
-  margin-left: 100px;
-}
-
-.ml-\[60px\] {
-  margin-left: 60px;
-}
-
-.ml-\[80px\] {
-  margin-left: 80px;
-}
-
-.ml-\[120px\] {
-  margin-left: 120px;
-}
-
-.mb-\[30px\] {
-  margin-bottom: 30px;
-}
-
-.ml-\[401px\] {
-  margin-left: 401px;
-}
-
-.mb-\[40px\] {
-  margin-bottom: 40px;
-}
-
-.ml-\[30px\] {
-  margin-left: 30px;
-}
-
-.mb-\[100px\] {
-  margin-bottom: 100px;
-}
-
-.mt-\[200px\] {
-  margin-top: 200px;
-}
-
 .flex {
   display: flex;
 }
@@ -656,13 +608,12 @@ video {
   display: none;
 }
 
-.size-\[16px\] {
-  width: 16px;
-  height: 16px;
-}
-
 .h-\[50px\] {
   height: 50px;
+}
+
+.h-\[80\%\] {
+  height: 80%;
 }
 
 .h-\[800px\] {
@@ -673,84 +624,8 @@ video {
   height: 100%;
 }
 
-.h-\[900\%\] {
-  height: 900%;
-}
-
-.h-\[80\%\] {
-  height: 80%;
-}
-
-.w-\[325px\] {
-  width: 325px;
-}
-
-.w-\[340px\] {
-  width: 340px;
-}
-
-.w-\[375px\] {
-  width: 375px;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-\[440px\] {
-  width: 440px;
-}
-
-.w-\[280px\] {
-  width: 280px;
-}
-
-.w-\[300px\] {
-  width: 300px;
-}
-
-.w-\[320px\] {
-  width: 320px;
-}
-
-.w-\[330px\] {
-  width: 330px;
-}
-
-.w-\[310px\] {
-  width: 310px;
-}
-
-.w-\[350px\] {
-  width: 350px;
-}
-
-.w-\[360px\] {
-  width: 360px;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[380px\] {
-  width: 380px;
-}
-
-.w-\[370px\] {
-  width: 370px;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-11 {
-  width: 2.75rem;
+.h-\[700px\] {
+  height: 700px;
 }
 
 .w-12 {
@@ -761,8 +636,24 @@ video {
   width: 200px;
 }
 
-.w-\[250px\] {
-  width: 250px;
+.w-\[325px\] {
+  width: 325px;
+}
+
+.w-\[340px\] {
+  width: 340px;
+}
+
+.w-\[350px\] {
+  width: 350px;
+}
+
+.w-\[375px\] {
+  width: 375px;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .flex-row {
@@ -789,10 +680,6 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -801,20 +688,8 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .border {
   border-width: 1px;
-}
-
-.border-r-4 {
-  border-right-width: 4px;
 }
 
 .border-solid {
@@ -824,11 +699,6 @@ video {
 .border-grey {
   --tw-border-opacity: 1;
   border-color: rgb(142 143 153 / var(--tw-border-opacity));
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-darkSlateGrey {
@@ -845,107 +715,28 @@ video {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.pl-\[20px\] {
-  padding-left: 20px;
-}
-
-.pl-\[30px\] {
-  padding-left: 30px;
-}
-
-.pl-\[50px\] {
-  padding-left: 50px;
-}
-
-.pr-\[50px\] {
-  padding-right: 50px;
+.pb-\[15px\] {
+  padding-bottom: 15px;
 }
 
 .pl-\[100px\] {
   padding-left: 100px;
 }
 
+.pl-\[20px\] {
+  padding-left: 20px;
+}
+
 .pr-\[100px\] {
   padding-right: 100px;
-}
-
-.pt-\[10px\] {
-  padding-top: 10px;
-}
-
-.pb-\[10px\] {
-  padding-bottom: 10px;
-}
-
-.pb-\[15px\] {
-  padding-bottom: 15px;
 }
 
 .pt-\[15px\] {
   padding-top: 15px;
 }
 
-.pl-\[80px\] {
-  padding-left: 80px;
-}
-
-.pr-\[80px\] {
-  padding-right: 80px;
-}
-
-.pl-\[90px\] {
-  padding-left: 90px;
-}
-
-.pr-\[90px\] {
-  padding-right: 90px;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-justify {
-  text-align: justify;
-}
-
-.align-text-top {
-  vertical-align: text-top;
-}
-
 .text-\[16px\] {
   font-size: 16px;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-\[40px\] {
-  font-size: 40px;
-}
-
-.text-\[60px\] {
-  font-size: 60px;
-}
-
-.text-\[50px\] {
-  font-size: 50px;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .font-medium {
@@ -956,48 +747,12 @@ video {
   font-weight: 100;
 }
 
-.font-\[16px\] {
-  font-weight: 16px;
-}
-
-.font-\[700\] {
-  font-weight: 700;
-}
-
-.font-\[500\] {
-  font-weight: 500;
-}
-
-.font-\[300\] {
-  font-weight: 300;
-}
-
-.font-normal {
-  font-weight: 400;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-
-.leading-3 {
-  line-height: .75rem;
-}
-
-.leading-7 {
-  line-height: 1.75rem;
-}
-
-.leading-8 {
-  line-height: 2rem;
-}
-
 .leading-5 {
   line-height: 1.25rem;
 }
 
-.leading-4 {
-  line-height: 1rem;
+.leading-8 {
+  line-height: 2rem;
 }
 
 .text-charcoalGrey {
@@ -1077,6 +832,14 @@ li {
     margin-bottom: 2.5rem;
   }
 
+  .xl\:mb-\[40px\] {
+    margin-bottom: 40px;
+  }
+
+  .xl\:mb-\[50px\] {
+    margin-bottom: 50px;
+  }
+
   .xl\:ml-0 {
     margin-left: 0px;
   }
@@ -1093,20 +856,12 @@ li {
     margin-right: 20px;
   }
 
-  .xl\:mt-\[40px\] {
-    margin-top: 40px;
-  }
-
-  .xl\:mb-\[40px\] {
-    margin-bottom: 40px;
-  }
-
-  .xl\:mb-\[50px\] {
-    margin-bottom: 50px;
-  }
-
   .xl\:mt-\[0\] {
     margin-top: 0;
+  }
+
+  .xl\:mt-\[40px\] {
+    margin-top: 40px;
   }
 
   .xl\:flex {
@@ -1125,12 +880,20 @@ li {
     height: auto;
   }
 
+  .xl\:w-\[280px\] {
+    width: 280px;
+  }
+
   .xl\:w-\[350px\] {
     width: 350px;
   }
 
   .xl\:w-\[400px\] {
     width: 400px;
+  }
+
+  .xl\:w-\[440px\] {
+    width: 440px;
   }
 
   .xl\:w-\[50\%\] {
@@ -1141,24 +904,8 @@ li {
     width: 800px;
   }
 
-  .xl\:w-\[440px\] {
-    width: 440px;
-  }
-
-  .xl\:w-\[280px\] {
-    width: 280px;
-  }
-
-  .xl\:flex-col {
-    flex-direction: column;
-  }
-
   .xl\:items-start {
     align-items: flex-start;
-  }
-
-  .xl\:justify-center {
-    justify-content: center;
   }
 
   .xl\:rounded-xl {
@@ -1178,17 +925,12 @@ li {
     border-color: rgb(255 255 255 / var(--tw-border-opacity));
   }
 
-  .xl\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  .xl\:pl-\[100px\] {
+    padding-left: 100px;
   }
 
   .xl\:pl-\[10px\] {
     padding-left: 10px;
-  }
-
-  .xl\:pl-\[100px\] {
-    padding-left: 100px;
   }
 
   .xl\:pr-\[100px\] {
