--- a/public/style/output.css
+++ b/public/style/output.css
@@ -444,6 +444,16 @@ video {
   display: none;
 }
 
+h1,
+  h3 {
+  font-family: RobotoBold;
+}
+
+p,
+  span {
+  font-family: RobotoRegular;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -548,16 +558,16 @@ video {
   visibility: visible;
 }
 
-.mb-\[10px\] {
-  margin-bottom: 10px;
-}
-
-.mb-\[15px\] {
-  margin-bottom: 15px;
-}
-
 .mb-\[20px\] {
   margin-bottom: 20px;
+}
+
+.mb-\[3\%\] {
+  margin-bottom: 3%;
+}
+
+.mb-\[5\%\] {
+  margin-bottom: 5%;
 }
 
 .mb-\[50px\] {
@@ -568,10 +578,6 @@ video {
   margin-bottom: 7px;
 }
 
-.ml-\[10px\] {
-  margin-left: 10px;
-}
-
 .ml-\[25px\] {
   margin-left: 25px;
 }
@@ -580,20 +586,20 @@ video {
   margin-left: 30px;
 }
 
-.mr-\[10px\] {
-  margin-right: 10px;
+.ml-\[7\%\] {
+  margin-left: 7%;
 }
 
-.mt-\[10px\] {
-  margin-top: 10px;
+.mr-\[5\%\] {
+  margin-right: 5%;
+}
+
+.mt-\[10\%\] {
+  margin-top: 10%;
 }
 
 .mt-\[200px\] {
   margin-top: 200px;
-}
-
-.mt-\[30px\] {
-  margin-top: 30px;
 }
 
 .mt-\[40px\] {
@@ -608,24 +614,16 @@ video {
   display: none;
 }
 
-.h-\[50px\] {
-  height: 50px;
-}
-
-.h-\[80\%\] {
-  height: 80%;
-}
-
-.h-\[800px\] {
-  height: 800px;
-}
-
 .h-\[100\%\] {
   height: 100%;
 }
 
-.h-\[700px\] {
-  height: 700px;
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .w-12 {
@@ -638,10 +636,6 @@ video {
 
 .w-\[325px\] {
   width: 325px;
-}
-
-.w-\[340px\] {
-  width: 340px;
 }
 
 .w-\[350px\] {
@@ -678,6 +672,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.self-start {
+  align-self: flex-start;
 }
 
 .rounded-md {
@@ -735,16 +733,23 @@ video {
   padding-top: 15px;
 }
 
-.text-\[16px\] {
-  font-size: 16px;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-medium {
   font-weight: 500;
-}
-
-.font-thin {
-  font-weight: 100;
 }
 
 .leading-5 {
@@ -753,6 +758,10 @@ video {
 
 .leading-8 {
   line-height: 2rem;
+}
+
+.text-\[4xl\] {
+  color: 4xl;
 }
 
 .text-charcoalGrey {
@@ -771,46 +780,41 @@ video {
 }
 
 @font-face {
-  font-family: Roboto-bold;
+  font-family: RobotoBold;
 
-  src: url(../fonts/Roboto-Bold.ttf);
-
-  font-weight: 700;
+  src: url("../fonts/Roboto-Bold.ttf");
 }
 
 @font-face {
-  font-family: Roboto-regular;
+  font-family: RobotoRegular;
 
-  src: url(../fonts/Roboto-Regular.ttf);
+  src: url("../fonts/Roboto-Regular.ttf");
 }
 
-body {
-  font-size: 16px;
-  font-family: Roboto-regular, sans-serif;
+.errorText {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  --tw-text-opacity: 1;
+  color: rgb(239 135 125 / var(--tw-text-opacity));
 }
 
-h1 {
-  font-size: 40px;
-  font-family: Roboto-bold, sans-serif;
-  align-self: flex-start;
+.errorInput {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 135 125 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 232 230 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(239 135 125 / var(--tw-text-opacity));
 }
 
-h3 {
-  font-family: Roboto-bold, sans-serif;
-  font-size: 14px;
+.errorInput::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(239 135 125 / var(--tw-text-opacity));
 }
 
-li::marker {
-  padding-top: 10px;
-}
-
-li {
-  font-size: 16px;
-  font-family: Roboto-regular, sans-serif;
-}
-
-#errorText {
-  color: "#ef877d";
+.errorInput::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(239 135 125 / var(--tw-text-opacity));
 }
 
 .hover\:from-salmon:hover {
@@ -823,13 +827,9 @@ li {
   --tw-gradient-to: #ff673e var(--tw-gradient-to-position);
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
   .xl\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .xl\:mb-10 {
-    margin-bottom: 2.5rem;
   }
 
   .xl\:mb-\[40px\] {
@@ -844,24 +844,20 @@ li {
     margin-left: 0px;
   }
 
-  .xl\:ml-\[10px\] {
-    margin-left: 10px;
-  }
-
   .xl\:ml-\[40px\] {
     margin-left: 40px;
   }
 
-  .xl\:mr-\[20px\] {
-    margin-right: 20px;
+  .xl\:ml-\[5\%\] {
+    margin-left: 5%;
+  }
+
+  .xl\:mr-\[6\%\] {
+    margin-right: 6%;
   }
 
   .xl\:mt-\[0\] {
     margin-top: 0;
-  }
-
-  .xl\:mt-\[40px\] {
-    margin-top: 40px;
   }
 
   .xl\:flex {
@@ -872,20 +868,32 @@ li {
     display: none;
   }
 
-  .xl\:h-\[90\%\] {
-    height: 90%;
+  .xl\:h-\[100\%\] {
+    height: 100%;
+  }
+
+  .xl\:h-\[60vh\] {
+    height: 60vh;
   }
 
   .xl\:h-auto {
     height: auto;
   }
 
-  .xl\:w-\[280px\] {
-    width: 280px;
+  .xl\:min-h-\[550px\] {
+    min-height: 550px;
   }
 
-  .xl\:w-\[350px\] {
-    width: 350px;
+  .xl\:w-\[100\%\] {
+    width: 100%;
+  }
+
+  .xl\:w-\[2\%\] {
+    width: 2%;
+  }
+
+  .xl\:w-\[280px\] {
+    width: 280px;
   }
 
   .xl\:w-\[400px\] {
@@ -900,12 +908,28 @@ li {
     width: 50%;
   }
 
-  .xl\:w-\[800px\] {
-    width: 800px;
+  .xl\:w-\[50vw\] {
+    width: 50vw;
+  }
+
+  .xl\:min-w-\[840px\] {
+    min-width: 840px;
+  }
+
+  .xl\:max-w-\[484px\] {
+    max-width: 484px;
   }
 
   .xl\:items-start {
     align-items: flex-start;
+  }
+
+  .xl\:justify-center {
+    justify-content: center;
+  }
+
+  .xl\:self-start {
+    align-self: flex-start;
   }
 
   .xl\:rounded-xl {
@@ -925,16 +949,32 @@ li {
     border-color: rgb(255 255 255 / var(--tw-border-opacity));
   }
 
+  .xl\:bg-contain {
+    background-size: contain;
+  }
+
+  .xl\:bg-center {
+    background-position: center;
+  }
+
+  .xl\:bg-no-repeat {
+    background-repeat: no-repeat;
+  }
+
+  .xl\:pb-\[1\%\] {
+    padding-bottom: 1%;
+  }
+
   .xl\:pl-\[100px\] {
     padding-left: 100px;
   }
 
-  .xl\:pl-\[10px\] {
-    padding-left: 10px;
-  }
-
   .xl\:pr-\[100px\] {
     padding-right: 100px;
+  }
+
+  .xl\:pt-\[1\%\] {
+    padding-top: 1%;
   }
 
   .xl\:text-\[50px\] {
